--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,7 @@ SET(interactions_SOURCES
 	Interactions/SimpleMultiField.cpp
 	Interactions/ActiveMultiField.cpp
 	Interactions/ActiveNematic.cpp
+	Interactions/WetModel.cpp
 )
 
 SET(forces_SOURCES
