added square walls and fixed bugs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,7 @@ SET(box_SOURCES
 	Boxes/BaseBox.cpp
 	Boxes/SquareBox.cpp
 	Boxes/Channel.cpp
+	Boxes/SquareWalls.cpp
 	Boxes/OrthogonalBox.cpp
 	Boxes/LeesEdwardsSquareBox.cpp
 	Boxes/BoxFactory.cpp
