added moving walls

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,7 @@ SET(box_SOURCES
 	Boxes/BaseBox.cpp
 	Boxes/SquareBox.cpp
 	Boxes/Channel.cpp
+	Boxes/MovingWalls.cpp
 	Boxes/SquareWalls.cpp
 	Boxes/OrthogonalBox.cpp
 	Boxes/LeesEdwardsBox.cpp
