Poisueille flow channel

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,6 +49,7 @@ SET(forces_SOURCES
 	Forces/BaseForce.cpp
 	Forces/ChannelWalls.cpp
 	Forces/ShearFlowChannel.cpp
+	Forces/PoiseuilleFlowChannel.cpp
 )
 
 SET(box_SOURCES
