--- a/examples/external.conf
+++ b/examples/external.conf
@@ -1,7 +1,8 @@
 {
-type = channel_walls
+type = shear_flow_channel
 field = -1
-kappa_wall = 4
-lambda = 2
+kappa_wall = 0
+lambda = 2.0
+shear_rate = 0
 generate_inside = 0
 }
